[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
name = "photon-quickstart"
version = "0.1.0"

[dependencies]
photon-hal = { git = "https://github.com/japaric/photon-hal" }
photon = { git = "https://github.com/japaric/photon" }

[profile.dev]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
