[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
name = "photon-quickstart"
version = "0.1.0"

[dependencies]
photon-hal = { path = "../photon-hal" }
photon = { path = "../photon" }

[profile.dev]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
